--- a/gbl_front/gbl-frontend/src/app/users/user-list/user-list.html
+++ b/gbl_front/gbl-frontend/src/app/users/user-list/user-list.html
@@ -1,16 +1,21 @@
-<h2>Liste des utilisateurs</h2>
-
-<div
-  class="user-list"
-  style="
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-      Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  "
->
+<div *ngIf="loading">Chargement...</div>
+<div *ngIf="error" class="error">{{ error }}</div>
+<div class="user-list">
   <h2>Utilisateurs</h2>
-  <button (click)="goNew()">Nouveau</button>
-  <div *ngIf="loading">Chargement...</div>
-  <div *ngIf="error" class="error">{{ error }}</div>
+  <!-- 🔍 barre de recherche -->
+  <input
+    type="text"
+    [ngModel]="searchQuery"
+    (ngModelChange)="onSearch($event)"
+    placeholder="Rechercher par nom, prénom ou email..."
+  />
+
+  <div class="container">
+    <div>
+      <button (click)="goBooks()">📚 Voir les livres</button>
+    </div>
+    <div><button (click)="goNew()">➕ jouter un utilisateur</button></div>
+  </div>
 
   <table *ngIf="!loading && users.length">
     <thead>
