--- a/gbl_front/gbl-frontend/src/app/books/book-detail/book-detail.css
+++ b/gbl_front/gbl-frontend/src/app/books/book-detail/book-detail.css
@@ -1,9 +1,9 @@
 .detail-container {
   max-width: 700px;
   margin: auto;
-  background: #fdfdfd;
   padding: 20px;
   border-radius: 8px;
+  color: white;
 }
 
 h2 {
@@ -37,13 +37,6 @@ h2 {
 .meta p {
   margin: 6px 0;
 }
-
 button {
-  margin-top: 20px;
-  background: #007bff;
-  color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  background: none;
 }
