--- a/gbl_front/gbl-frontend/src/app/categories/categorie-form/categorie-form.css
+++ b/gbl_front/gbl-frontend/src/app/categories/categorie-form/categorie-form.css
@@ -1,7 +1,6 @@
 .form-container {
   max-width: 500px;
   margin: auto;
-  background: #fdfdfd;
   padding: 20px;
   border-radius: 8px;
 }
@@ -12,6 +11,7 @@ h2 {
 }
 
 .form-group {
+  color: white;
   margin-bottom: 15px;
 }
 
