--- a/gbl_front/gbl-frontend/src/app/users/user-list/user-list.html
+++ b/gbl_front/gbl-frontend/src/app/users/user-list/user-list.html
@@ -1,20 +1,29 @@
 <div *ngIf="loading">Chargement...</div>
 <div *ngIf="error" class="error">{{ error }}</div>
-<div class="user-list">
+<div class="list-container">
   <h2>Utilisateurs</h2>
   <!-- 🔍 barre de recherche -->
-  <input
-    type="text"
-    [ngModel]="searchQuery"
-    (ngModelChange)="onSearch($event)"
-    placeholder="Rechercher par nom, prénom ou email..."
-  />
 
-  <div class="container">
-    <div>
-      <button (click)="goBooks()">📚 Voir les livres</button>
+  <div class="list-container">
+    <div class="bar">
+      <input
+        type="text"
+        [ngModel]="searchQuery"
+        (ngModelChange)="onSearch($event)"
+        placeholder="Rechercher par nom, prénom ou email..."
+      />
+      <div>
+        <button title="Livres" style="background: none" title="Livres" (click)="goBooks()">
+          <span style="margin-top: 5px" class="material-symbols-outlined"> book_4 </span>
+        </button>
+        <button title="Catégories" style="background: none" (click)="goCategories()">
+          <span style="margin-top: 5px" class="material-symbols-outlined"> category</span>
+        </button>
+        <button title="Ajouter" style="background: none" title="Ajouter" (click)="goNew()">
+          <span style="margin-top: 5px" class="material-symbols-outlined"> add_circle</span>
+        </button>
+      </div>
     </div>
-    <div><button (click)="goNew()">➕ jouter un utilisateur</button></div>
   </div>
 
   <table *ngIf="!loading && users.length">
@@ -36,8 +45,8 @@
         <td>{{ u.email }}</td>
         <td>{{ u.statut }}</td>
         <td>
-          <button (click)="goEdit(u)">Éditer</button>
-          <button (click)="delete(u)">Supprimer</button>
+          <button (click)="goEdit(u)">Modifier</button>
+          <button class="delete" (click)="delete(u)">Supprimer</button>
         </td>
       </tr>
     </tbody>
