--- a/gbl_front/gbl-frontend/src/styles.css
+++ b/gbl_front/gbl-frontend/src/styles.css
@@ -4,6 +4,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body {
+  height: 100vh;
+  background: radial-gradient(circle at 94.02% 88.03%, #4f5c6a, transparent 100%),
+    radial-gradient(circle at 25.99% 27.79%, #b17fb0, transparent 100%),
+    radial-gradient(circle at 50% 50%, #000000, #000000 100%);
+}
 input[type='text'] {
   padding: 6px 10px;
   border: 1px solid #ccc;
@@ -12,4 +18,178 @@ input[type='text'] {
   width: 100%;
   max-width: 300px;
   margin-bottom: 10px;
+}
+
+/* You can add global styles to this file, and also import other style files */
+.nav__cont {
+  position: fixed;
+  width: 60px;
+  top: 10%;
+  left: 0;
+  height: 100vh;
+  z-index: 100;
+  background-color: #202020;
+  overflow: hidden;
+  transition: width 0.3s ease;
+  cursor: pointer;
+  box-shadow: 4px 7px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  &:hover {
+    width: 200px;
+  }
+  @media screen and (min-width: 600px) {
+    width: 60px;
+  }
+  height: 500px;
+}
+
+.nav {
+  list-style-type: none;
+  color: white;
+  &:first-child {
+    padding-top: 1.5rem;
+  }
+}
+
+.nav__items {
+  padding-bottom: 4rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  a {
+    position: relative;
+    display: block;
+    top: -35px;
+    padding-left: 25px;
+    padding-right: 15px;
+    transition: all 0.3s ease;
+    margin-left: 25px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: white;
+    font-family: 'roboto';
+    font-weight: 100;
+    font-size: 1.35em;
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 2px;
+      background: radial-gradient(circle at 94.02% 88.03%, #54a4ff, transparent 100%);
+      opacity: 0;
+      transition: all 0.5s ease;
+      z-index: -10;
+    }
+  }
+  &:hover a:after {
+    opacity: 1;
+  }
+  svg {
+    width: 26px;
+    height: 26px;
+    position: relative;
+    left: -25px;
+    cursor: pointer;
+    @media screen and(min-width:600px) {
+      width: 32px;
+      height: 32px;
+      left: -15px;
+    }
+  }
+}
+
+h1 {
+  margin-top: 6rem;
+  margin-left: 80px;
+  text-align: center;
+  font-family: 'Roboto';
+  font-weight: 100;
+  font-size: 4rem;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 6px;
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+}
+.bar {
+  display: flex;
+  justify-content: space-between;
+}
+.list-container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 8px;
+  /* From https://css.glass */
+  background: rgba(174, 159, 159, 0.19);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.8px);
+  -webkit-backdrop-filter: blur(3.8px);
+  border: 1px solid rgba(174, 159, 159, 0.34);
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.actions {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+}
+
+.actions input {
+  flex: 1;
+  margin-right: 10px;
+  padding: 8px;
+}
+
+button {
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 5px;
+  justify-content: center;
+}
+
+button.delete {
+  background: #bd313f;
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.8px);
+  -webkit-backdrop-filter: blur(3.8px);
+  border: 1px solid rgba(174, 159, 159, 0.34);
+  color: white;
+}
+
+button:not(.delete) {
+  background: rgba(24, 91, 200, 0.663);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.8px);
+  -webkit-backdrop-filter: blur(3.8px);
+  border: 1px solid rgba(174, 159, 159, 0.34);
+  color: white;
+}
+
+table {
+  color: white;
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 15px;
+}
+
+th {
+  border: 1px solid #dddddd00;
+  padding: 8px;
+  text-align: center;
+}
+td {
+  border: none;
+  padding: 8px;
+  text-align: center;
 }
